--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iarani-notes",
+  "name": "my-notes",
   "version": "0.1.0",
   "homepage": "https://gyanendraknojiya.github.io/react-note-book",
   "private": true,
